<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/track_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="4dp"
    android:minHeight="61dp"
    android:orientation="horizontal"
    android:theme="@style/Base.Theme.PlaylistMaker.Search.Screen">

    <androidx.cardview.widget.CardView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="8dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/album_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/no_image_album" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/TrackNaming.Title"
            android:id="@+id/track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:lines="1"
            android:text="@string/track_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artist_name"
                style="@style/TrackNaming.SubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/artist_name" />

            <TextView
                android:id="@+id/track_time"
                style="@style/TrackNaming.SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:drawablePadding="5dp"
                android:text="@string/base_time"
                app:drawableStartCompat="@drawable/dot" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        style="@style/Chevron"
        android:id="@+id/forward"
        android:layout_marginHorizontal="8dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="5dp"
        app:srcCompat="@drawable/arrow_forward" />
</LinearLayout>

