<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yp_blue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/size_4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_12dp"
                android:layout_marginTop="@dimen/size_10dp"
                android:layout_marginEnd="@dimen/size_12dp"
                android:layout_marginBottom="@dimen/size_12dp"
                android:text="@string/app_name"
                android:textColor="@color/yp_white"
                android:textSize="@dimen/main_text_size"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/size_16dp">

            <Button
                android:id="@+id/search_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/yp_white"
                android:fontFamily="sans-serif-medium"
                android:foreground="?attr/selectableItemBackground"
                android:insetTop="@dimen/size_8dp"
                android:insetBottom="@dimen/size_8dp"
                android:text="@string/search"
                android:textColor="@color/yp_black"
                android:textSize="@dimen/main_text_size"
                app:cornerRadius="@dimen/button_corner_radius"
                app:icon="@drawable/search_light_mode"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/size_8dp"
                app:iconTint="@color/yp_black" />

            <Button
                android:id="@+id/library_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/yp_white"
                android:foreground="?attr/selectableItemBackground"
                android:insetTop="@dimen/size_8dp"
                android:insetBottom="@dimen/size_8dp"
                android:text="@string/library"
                android:textColor="@color/yp_black"
                android:textSize="@dimen/main_text_size"
                app:cornerRadius="@dimen/button_corner_radius"
                app:icon="@drawable/library_light_mode"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/size_8dp"
                app:iconTint="@color/yp_black" />

            <Button
                android:id="@+id/settings_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/yp_white"
                android:foreground="?attr/selectableItemBackground"
                android:insetTop="@dimen/size_8dp"
                android:insetBottom="@dimen/size_8dp"
                android:text="@string/settings"
                android:textColor="@color/yp_black"
                android:textSize="@dimen/main_text_size"
                app:cornerRadius="@dimen/button_corner_radius"
                app:icon="@drawable/settings_light_mode"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/size_8dp"
                app:iconTint="@color/yp_black" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>