<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yp_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/size_4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_12dp"
                android:layout_marginTop="@dimen/size_10dp"
                android:layout_marginEnd="@dimen/size_12dp"
                android:layout_marginBottom="@dimen/size_12dp"
                android:text="@string/settings"
                android:textColor="@color/yp_black"
                android:textSize="@dimen/main_text_size"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/size_24dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/size_16dp"
                    android:paddingTop="@dimen/size_21dp"
                    android:paddingBottom="@dimen/size_21dp"
                    android:text="@string/dark_team"
                    android:textColor="@color/yp_black"
                    android:textSize="@dimen/main_text_size" />

                <Switch
                    android:layout_width="56dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="@dimen/size_6dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/size_16dp"
                    android:paddingTop="@dimen/size_21dp"
                    android:paddingBottom="@dimen/size_21dp"
                    android:text="@string/sharing_app"
                    android:textColor="@color/yp_black"
                    android:textSize="@dimen/main_text_size"
                    app:icon="@drawable/share"
                    app:iconGravity="textEnd"
                    app:iconPadding="@dimen/size_8dp"
                    app:iconTint="@color/yp_black" />

                <ImageView
                    android:layout_width="@dimen/size_24dp"
                    android:layout_height="@dimen/size_24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/size_12dp"
                    android:paddingLeft="@dimen/size_4dp"
                    android:paddingTop="@dimen/size_3dp"
                    android:paddingRight="@dimen/size_4dp"
                    android:paddingBottom="@dimen/size_3dp"
                    android:src="@drawable/share"
                    app:tint="@color/yp_gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/size_16dp"
                    android:paddingTop="@dimen/size_21dp"
                    android:paddingBottom="@dimen/size_21dp"
                    android:text="@string/support"
                    android:textColor="@color/yp_black"
                    android:textSize="@dimen/main_text_size" />

                <ImageView
                    android:layout_width="@dimen/size_24dp"
                    android:layout_height="@dimen/size_24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/size_12dp"
                    android:paddingLeft="@dimen/size_2dp"
                    android:paddingTop="@dimen/size_3dp"
                    android:paddingRight="@dimen/size_2dp"
                    android:paddingBottom="@dimen/size_3dp"
                    android:src="@drawable/support"
                    app:tint="@color/yp_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/size_16dp"
                    android:paddingTop="@dimen/size_21dp"
                    android:paddingBottom="@dimen/size_21dp"
                    android:text="@string/user_policy"
                    android:textColor="@color/yp_black"
                    android:textSize="@dimen/main_text_size" />

                <ImageView
                    android:layout_width="@dimen/size_24dp"
                    android:layout_height="@dimen/size_24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/size_12dp"
                    android:paddingLeft="@dimen/size_8dp"
                    android:paddingTop="@dimen/size_5dp"
                    android:paddingRight="@dimen/size_8dp"
                    android:paddingBottom="@dimen/size_5dp"
                    android:src="@drawable/arrow_forward"
                    app:tint="@color/yp_gray" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/yp_light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="bottom"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/yp_white"
                android:fontFamily="sans-serif-medium"
                android:foreground="?attr/selectableItemBackground"
                android:insetTop="@dimen/size_0dp"
                android:insetBottom="@dimen/size_0dp"
                android:padding="@dimen/size_8dp"
                android:text="@string/search"
                android:textColor="@color/yp_black"
                android:textSize="@dimen/small_text_size"
                app:cornerRadius="@dimen/size_0dp"
                app:icon="@drawable/search_light_mode"
                app:iconGravity="textTop"
                app:iconPadding="@dimen/size_8dp"
                app:iconTint="@color/yp_black" />

            <Button
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/yp_white"
                android:foreground="?attr/selectableItemBackground"
                android:insetTop="@dimen/size_0dp"
                android:insetBottom="@dimen/size_0dp"
                android:padding="@dimen/size_8dp"
                android:text="@string/library"
                android:textColor="@color/yp_black"
                android:textSize="@dimen/small_text_size"
                app:cornerRadius="@dimen/size_0dp"
                app:icon="@drawable/library_light_mode"
                app:iconGravity="textTop"
                app:iconPadding="@dimen/size_8dp"
                app:iconTint="@color/yp_black" />

            <Button
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/yp_white"
                android:foreground="?attr/selectableItemBackground"
                android:insetTop="@dimen/size_0dp"
                android:insetBottom="@dimen/size_0dp"
                android:padding="@dimen/size_8dp"
                android:text="@string/settings"
                android:textColor="@color/yp_blue"
                android:textSize="@dimen/small_text_size"
                app:cornerRadius="@dimen/size_0dp"
                app:icon="@drawable/settings_light_mode"
                app:iconGravity="textTop"
                app:iconPadding="@dimen/size_8dp"
                app:iconTint="@color/yp_blue" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>